cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
add_compile_options(-std=c++11)
find_package(OpenCV 3.4.0 REQUIRED PATHS /usr/local/)
if (OpenCV_INCLUDE_DIRS)
    include_directories("${OpenCV_INCLUDE_DIRS}")
    link_directories(${OpenCV_DIR}/lib)
    message(STATUS "OpenCV library status:")
    message(STATUS "    version: ${OpenCV_VERSION}")
    message(STATUS "    libraries: ${OpenCV_LIBS}")
    message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
endif (OpenCV_INCLUDE_DIRS)
#include_directories(${CUDA_INCLUDE_DIRS})
add_executable( DisplayImage DisplayImage.cpp )
#target_link_libraries( DisplayImage ${OpenCV_LIBS} ${CUDA_CUDA_LIBRARY})

target_link_libraries( DisplayImage ${OpenCV_LIBS})
